--- a/src/views/bmap/index.less
+++ b/src/views/bmap/index.less
@@ -1,7 +1,7 @@
 #bmap-container {
   position: relative;
   min-width: 750px;
-  // height: inherit;
+  height: inherit;
   min-height: 600px;
   font-size: 14px;
 }
